[package]
name = "ScEvents-Logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ethers = { version = "2.0", features = ["rustls", "ws"] }
tokio = { version = "1.28.1", features = ["full"] }
redis = "0.20"
serde = {version = "1.0" , features = ["derive"]}
serde_json = "1.0"
eyre = "0.6.8"
regex = "1.9.1"

